fix stretching omg

--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,8 @@ form {
 
 #screenshot-img {
 	flex: 0 1 440px;
+	width: 100%;
+	height: auto;
 }
 
 /*
